crates/database_crud_derive/tests/fixtures/fail_tuple_struct.stderr
error: proc-macro derive panicked
 --> tests/fixtures/fail_tuple_struct.rs:3:10
  |
3 | #[derive(Crud)]
  |          ^^^^
  |
  = help: message: Crud derive only supports structs with named fields
