crates/database_crud_derive/tests/fixtures/fail_tuple_struct.rs
use database_crud_derive::Crud;

#[derive(Crud)]
struct Point(f64, f64);

fn main() {}
